--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,3 +12,17 @@ services:
     environment:
       - SECRET_KEY=test
       - DEBUG=True
+
+  master:
+    image: locustio/locust
+    ports:
+     - "8089:8089"
+    volumes:
+      - ./core/locust:/mnt/locust
+    command: -f /mnt/locust/locustfile.py --master -H http://backend:8000
+  
+  worker:
+    image: locustio/locust
+    volumes:
+      - ./core/locust:/mnt/locust
+    command: -f /mnt/locust/locustfile.py --worker --master-host master
