--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,6 +1,15 @@
 
 version: "3.9"
+
 services:
+  redis:
+    container_name: redis
+    image: redis
+    restart: always
+    ports:
+    - "6379:6379"
+    command: redis-server --save 60 1 --loglevel warning
+
   backend:
     build: .
     container_name: todobackend
@@ -12,3 +21,22 @@ services:
     environment:
       - SECRET_KEY=test
       - DEBUG=True
+    depends_on:
+      - redis
+      
+  beat:
+    build: .
+    command: celery -A core beat -l info
+    volumes:
+      - ./core:/app
+    depends_on:
+      - backend
+  
+  worker:
+    build: .
+    command: celery -A core worker --loglevel=info
+    volumes:
+      - ./core:/app
+    depends_on:
+      - redis
+      - backend
